# agent-web-scraper

./: .coverage  .editorconfig  .env.template  .gitignore  .pre-commit-config.yaml  0_Analyze (python).txt  CHANGELOG.md  CLAUDE_CTO_MEMORY.md  CLAUDE_MEMORY.md  CONTRIBUTING.md  ENTERPRISE_STRATEGY.md  FIRST_DOLLAR_ACTIVATION_REPORT.md  FIRST_DOLLAR_SUCCESS_PLAN.md  JETBRAINS_AIR_BUSINESS_STRATEGY.md  MCP_AIR_INTEGRATION_STRATEGY.md  MULTI_AGENT_PLAN.md  Makefile  README.md  SECURITY.md  commit_costs.json  config.py  coverage.xml  dagger-ci.yml  dagger.json  demo_email_campaign.py  deploy_n8n_automation_production.py  execute_revenue_deployment.py  execute_revenue_strategy.py  executive-progress-tracker.html  github_issues_roadmap.json  last_commit_cost.json  launch-claude-squad.sh  metrics-daily.csv  pyproject.toml  railway.json  real_stripe_dashboard.py  reddit_scraper.py  requirements-dev.txt  requirements-scripts.txt  requirements.txt  (+6 more)
.claude/: settings.local.json
.github/: ACTIONS_TRIGGER.md  CODEOWNERS  pull_request_template.md
.github/workflows/: auto-kanban-management.yml  autonomous-revenue-engine.yml  autonomous_revenue_engine.yml  build.yml  ci.yml  dagger-ci.yml  dagger-revenue-pipeline.yml  daily_scrape.yml  deploy-production.yml  email_and_publish.yml  enterprise-quality-gate.yml  github_marketing_engine.yml  insight_report.yml  issue-management-automation.yml  kanban-milestone-automation.yml  modern-ci.yml  project-board-automation.yml  publish_blog.yml  revenue-infrastructure-setup.yml  sonar-quality-gate.yml  sonarqube.yml  support_insight_report.yml  test-coverage-check.yml  trial-conversion-automation.yml  update_roadmap.yml  weekly-lead-magnet.yml  weekly_digest.yml
Analyze (python)/: 10_Post Checkout repository.txt  11_Complete job.txt  1_Set up job.txt  2_Checkout repository.txt  3_Initialize CodeQL.txt  4_Autobuild.txt  5_Perform CodeQL Analysis.txt  8_Post Perform CodeQL Analysis.txt  9_Post Initialize CodeQL.txt  system.txt
CEO/: AGENT_MEMORY_PROTOCOL.md  CLAUDE.md  ENTERPRISE_STRATEGY.md  MULTI_AGENT_PLAN.md  claude-squad.yaml
CEO/.github/: CODEOWNERS
CFO/: CFO_EXECUTIVE_SUMMARY.md  CFO_FINANCIAL_ANALYSIS_REPORT.md  MULTI_AGENT_PLAN.md  cfo_24h_implementation_tracker.md  cfo_hourly_slack_updates.py  claude-squad.yaml  cogs_analysis.py  looker_studio_dashboard_config.py  saas_gurus_financial_model.py  simple_cogs_analysis.py  sonar-project.properties  test_stripe_pilot_checkout.py  test_stripe_slack_notifications.py
CMO/: .gitignore  BRAND_DEVELOPMENT_STRATEGY.md  CROSS_FUNCTIONAL_COLLABORATION.md  DOMAIN_ACQUISITION_STRATEGY.md  Dockerfile  FRONTEND_COPY_SPECIFICATIONS.md  INBOUND_MARKETING_STRATEGY.md  MULTI_AGENT_PLAN.md  Makefile  PROMPTS_THAT_SAVED_US_MONEY.md  SAAS_METRICS_DASHBOARD.md  THE_COST_SAVING_PROTOCOL.md  analytics_config.json  api_config.json  automation_status.json  claude-squad.yaml  deploy.sh  deployment_checklist.md  docker-compose.prod.yml  email_config.json  payment_links.json  pricing.html  pricing_page.html  production_config.json  pyproject.toml  real_stripe_client.py  security_config.json
agent-web-scraper-bare/: FETCH_HEAD  config  example_claude_prompt.md  scripts_map.txt  serpapi_files.txt  src_map.txt
app/: __init__.py
dagger/: cfo_revenue_pipeline.py  main.py  requirements.txt  revenue_pipeline.py
data/: cfo_pipeline_memory.json  cfo_token_usage_report.json  competitive_pricing_analysis.json  comprehensive_update_report.json  cost_optimization_dashboard.json  development_cost_estimates.json  enterprise_development_token_report.json  enterprise_token_optimization_report.json  enterprise_token_usage_report.json  financial_model_v2_3.json  financial_model_validation.json  n8n_workflow_4_live_payments.json  real_business_operations_report.json  revenue_acceleration_memory.json  revenue_acceleration_model.json  token_usage_validation_report.json  updated_financial_model_v2_1.json  updated_financial_model_v2_2.json  week1_cost_projections.json  week1_final_cost_summary.json  week1_token_usage_report.json  week2_completion_summary.json  week2_development_cost_report.json  week2_token_usage_report.json
docs/: agents.md  api-reference.md  architecture.md  deployment-guide.md  index.html  pricing.html  serpapi_costs.md  styles.css  trial-signup.html  undetected_scraper.md
logs/: app.log.1
marketing/: email-automation-sequence.json  meta-ads-campaign.json
project-dashboard/: github_issues_roadmap.json  kanban.json  update_diagram.py
project-documents/: MSA_REVIEW_SUMMARY.md  plan.md
reports/: Q2_2025_SaaS_Pain_Point_Report.md  cto_reddit_metrics_status_report.md  insight_daily_2025-05-27.md  insight_daily_2025-05-28.md  insight_daily_2025-05-29.md  insight_daily_2025-05-30.md  insight_daily_2025-05-31.md  insight_daily_2025-06-01.md  insight_daily_2025-06-02.md  insight_daily_2025-06-03.md  insight_daily_2025-06-04.md  insight_daily_2025-06-06.md  weekly_report_latest.json
scripts/: auto_organize_kanban.py  autonomous_business_system.py  claude_budget_monitor.py  cleanup_logs.py  create_insight_issue.py  create_issues_bulk.py  customer_outreach.py  fallback_csv_logger.py  fix_reddit_metrics.py  generate_ceo_report.sh  generate_insight.py  generate_lead_magnet.py  generate_week1_report.py  github_epic_issue_setup.py  github_marketing_automation.py  github_web_automation.py  immediate_revenue_activation.py  meta_ads_campaign_launcher.py  newsletter_automation_demo.py  optimize_outreach.py  populate_github_kanban.py  publish_substack_post.py  publish_to_linkedin.py  publish_to_twitter.py  real_stripe_integration.py  requirements-scripts.txt  revenue_dashboard.py  revenue_deployment_coordinator.py  revenue_verification_system.py  send_email_report.py  serpapi_analysis.py  setup_dagger.sh  setup_dev.py  setup_logging.py  setup_stripe_payments.py  simple_kanban_auto.py  test_slack_simple.py  week2_oversight_system.py
tests/: conftest.py  test_sonar_quality.py
wiki/: Agentic-RAG-System.md  Dagger-CI-CD-Pipeline.md  Home.md  Investment-Thesis.md  Modern-Stack-2025.md  Revenue-Model-&-Metrics.md
(+500 files in other folders)
